did some styling

--- a/app/templates/home.tpl.html
+++ b/app/templates/home.tpl.html
@@ -1,8 +1,14 @@
 <h1 class="title">Home Page</h1>
 
-<ul>
-  <li ng-repeat="gif in gifs">
-    <h4>{{ gif.name }}</h4>
-    <img ng-src="{{ gif.url }}" alt="{{ gif.name }}">
-  </li>
-</ul>
+<div class="card" ng-repeat="gif in gifs">
+  <div class="card-image">
+    <figure class="image is-4by3">
+      <img ng-src="{{ gif.url }}" alt="{{ gif.name }}">
+    </figure>
+  </div>
+  <div class="card-content">
+    <div class="media">
+      <p class="title is-5">{{ gif.name }}</p>
+    </div>
+  </div>
+</div>
