--- a/app/templates/layout.tpl.html
+++ b/app/templates/layout.tpl.html
@@ -1,12 +1,19 @@
-<nav>
-  <a href="/#/">Home</a>
-  <a href="/#/about">About</a>
-  <a href="/#/contact">Contact</a> | 
-  <a href="/#/add">Add Gif</a>
+<nav class="nav">
+  <div class="nav-left">
+    <a class="nav-item" href="/#/">
+      <h5 class="title pad-left">Giffer</h5>
+    </a>
+  </div>
+  <div class="nav-right">
+    <a class="nav-item is-tab" href="/#/">Home</a>
+    <a class="nav-item is-tab" href="/#/about">About</a>
+    <a class="nav-item is-tab" href="/#/contact">Contact</a>
+    <a class="nav-item is-tab" href="/#/add">Add Gif</a>
+  </div>
 </nav>
 
 <div class="wrapper" ui-view></div>
 
 <footer>
-  &copy 2016 | Tim's Gif Stuff
+  &copy 2016 | Giffer
 </footer>
